--- a/tv-search/style.css
+++ b/tv-search/style.css
@@ -68,6 +68,8 @@ main {
 
 .show {
   width: 300px;
+  /* height: 421px;
+  /* new */
   margin: 1rem;
   background-color: var(--secondary-color);
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
@@ -78,6 +80,35 @@ main {
 
 .show img {
   width: 100%;
+}
+
+.missing-image {
+  width: 300px;
+  width: 100%;
+  height: 421px;
+  /* above height not responsive */
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
+  align-content: space-around;
+}
+
+.missing-image-name {
+  /* height: fit-content; */
+  height: 20px;
+  margin-top: -30%;
+  padding: 50px;
+  text-align: center;
+}
+
+.missing-image-chan {
+  /* height: fit-content; */
+  height: 20px;
+  /* margin-top: 70%;
+  margin-left: 15px; */
+  text-align: center;
 }
 
 .show-info {
