--- a/tv-search/style.css
+++ b/tv-search/style.css
@@ -90,25 +90,19 @@ main {
   color: white;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  /* align-items: center; */
-  align-content: space-around;
+  align-content: center;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .missing-image-name {
-  /* height: fit-content; */
-  height: 20px;
-  margin-top: -30%;
-  padding: 50px;
   text-align: center;
+  font-size: 1.2em;
 }
 
 .missing-image-chan {
-  /* height: fit-content; */
-  height: 20px;
-  /* margin-top: 70%;
-  margin-left: 15px; */
   text-align: center;
+  font-size: .9em;
 }
 
 .show-info {
